Fixed Item Styling when text was too big for the card

--- a/src/pages/Home/Item.css
+++ b/src/pages/Home/Item.css
@@ -1,24 +1,17 @@
-
-
 .list-item {
-    flex: 1;
-    min-height: 80px;
     display: flex;
-    align-items: center;
-    justify-content: center;
+    flex-direction: column;
     border-bottom: 1px solid #ccc;
+    padding: 8px;
+    flex: 1 0 auto;
+    height: auto;
+    min-height: 80px;
 }
 
-/* .list-item:hover {
-    cursor: pointer;
-    background-color: #f8f9fa;
-} */
-
-.center-title .item-content {
+.item-content {
     display: flex;
     flex-direction: column;
     justify-content: center; /* vertical */
     align-items: center;     /* horizontal */
     text-align: center;
-    height: 100%;
 }
